# flipkart-price-trigger

./: .env  Dockerfile  README.md  flipkart_price_alert.py  main.py  pyproject.toml  requirements.txt  tracked_products.json
