[project]
name = "flipkart-price-alert"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12.3,<5",
    "ipykernel>=6.30.1",
    "python-dotenv>=1.0.1,<2",
    "python-telegram-bot>=22.4",
    "requests>=2.32.3,<3",
    "schedule>=1.2.2,<2",
    "selenium>=4.35.0",
    "webdriver-manager>=4.0.1",
]
